<resources>
    <string name="app_name">TutorAppStudents</string>
    <string name="title_activity_login">TutorAppStudents</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">No es una contraseña valida</string>
    <string name="invalid_password">Contraseña mínimo de 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tutorFindString">Busca un tutor segun el tema</string>
    <string name="RegisterText">Registrarme</string>
    <string name="Register">Registrarme</string>
    <string name="ReservButton">Ver Reservas</string>
    <string name="btnReserv">Reservar</string>
    <string name="specialities">Especialidades</string>
    <string name="textRegister">Registrarme</string>
    <string name="txtAcademicGroupName">Grupo Academico</string>
    <string name="txtDateCreation">Fecha de creacion</string>
    <string name="txtDate">Fecha de Nacimiento</string>
    <string name="txtSpecialities">Especialidades</string>
    <string name="stg_password">Contraseña</string>
    <string name="str_user">Usuario</string>
    <string name="str_hint">Nombres</string>
    <string name="str_dni">DNI</string>
    <string name="str_telephone">Telefono</string>
    <string name="str_address">Dirección</string>
    <string name="str_academic_group">Grupo Académico</string>
    <string name="str_find_tutor">Buscar Tutor</string>
    <string name="str_desc_tutor">Detalles del Tutor</string>
    <string name="str_reservas">Mis reservas</string>
    <string name="str_about_reservas">Acerca de la reserva</string>
    <string name="str_add_reserva">Agregar reserva</string>

    <string name="titlulo_pickers">Seleccionar fecha y hora</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="titulo_tema">Tema a seleccionar</string>
    <string name="str_tema">tema</string>
    <string name="str_commentary">Comentario adicional</string>
    <string name="str_hint_commentary">Comentario</string>
    <string name="str_btn_confirm_reserv">Enviar Reserva</string>
    <string name="Tutorname">Nombre del tutor:</string>
    <string name="academicgroupAddres">Grupo Acad. y Dirección:</string>
    <string name="ReservationAbout">Acerca de la reserva</string>
</resources>
